--- a/MyAwesomeApp.xcodeproj/xcshareddata/xcschemes/MyAwesomeApp.xcscheme
+++ b/MyAwesomeApp.xcodeproj/xcshareddata/xcschemes/MyAwesomeApp.xcscheme
@@ -15,7 +15,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "9AD1CB701BDC305300F3E7B0"
-               BuildableName = "MyAwesomeApp Debug.app"
+               BuildableName = "MyAwesomeApp Release.app"
                BlueprintName = "MyAwesomeApp"
                ReferencedContainer = "container:MyAwesomeApp.xcodeproj">
             </BuildableReference>
@@ -34,7 +34,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "9AD1CB701BDC305300F3E7B0"
-            BuildableName = "MyAwesomeApp Debug.app"
+            BuildableName = "MyAwesomeApp Release.app"
             BlueprintName = "MyAwesomeApp"
             ReferencedContainer = "container:MyAwesomeApp.xcodeproj">
          </BuildableReference>
@@ -57,7 +57,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "9AD1CB701BDC305300F3E7B0"
-            BuildableName = "MyAwesomeApp Debug.app"
+            BuildableName = "MyAwesomeApp Release.app"
             BlueprintName = "MyAwesomeApp"
             ReferencedContainer = "container:MyAwesomeApp.xcodeproj">
          </BuildableReference>
@@ -76,7 +76,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "9AD1CB701BDC305300F3E7B0"
-            BuildableName = "MyAwesomeApp Debug.app"
+            BuildableName = "MyAwesomeApp Release.app"
             BlueprintName = "MyAwesomeApp"
             ReferencedContainer = "container:MyAwesomeApp.xcodeproj">
          </BuildableReference>
